--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -13,8 +13,13 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Install dependencies
-      run: lein deps
+
+    - name: Use oxr463/setup-leiningen
+      uses: oxr463/setup-leiningen@0.0.1
+      with:
+        exec: |
+          lein uberjar && \
+          cp "$(find . -name '*.jar')" .   
       
     - name: Install Clojure CLI
       uses: DeLaGuardo/setup-clojure@12.5
@@ -23,9 +28,11 @@ jobs:
         clj-kondo: latest
         cljfmt: latest
 
+    - name: Install dependencies
+      run: lein deps
+
     - name: Check format
       run: cljfmt check src 
-      # test
 
     - name: Lint
       run: clj-kondo --lint src 
